Fixed spacing and such for footnotes.

--- a/src/components/molecules/Footnote/index.module.css
+++ b/src/components/molecules/Footnote/index.module.css
@@ -1,4 +1,14 @@
 .footnote {
+    font-size: 0.8rem;
+    margin-top: 0.5rem;
+}
+
+.footnote:nth-child(2) {
+    margin-top: 0;
+}
+
+.wrapper {
+    padding: 0.25rem;
 }
 
 .current {
@@ -8,4 +18,12 @@
 .index {
     float: left;
     margin-right: 0.25rem;
+}
+
+.paragraph:nth-child(2) {
+    margin-top: 0;
+}
+
+.paragraph:last-child {
+    margin-bottom: 0
 }
