--- a/src/components/organisms/Footnotes/index.module.css
+++ b/src/components/organisms/Footnotes/index.module.css
@@ -4,3 +4,8 @@
     overflow-y: scroll;
     position: relative;
 }
+
+.closeButton {
+    font-size: 2.0rem;
+    line-height: 2.0rem;
+}
